fix: fixed мodals & menu y-srcroll on mobiles with landscape orientation

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -10,6 +10,7 @@
       &-button
         display: none
   &-bottom
+    overflow-y: auto
     background-color: $dark
   &-menu
     display: flex
