--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -19,6 +19,8 @@
     top: 50%
     left: 50%
     max-width: 478px
+    max-height: 100%
+    overflow-y: auto
     padding: 33px 88px
     transform: translate(-50%, -50%)
     color: $light
